--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -13,7 +13,9 @@
  - [敏捷企业 作者访谈录 英文书 目前无中文版](http://www.infoq.com/cn/articles/book-review-agile-enterprise?utm_campaign=rightbar_v2&utm_source=infoq&utm_medium=articles_link&utm_content=link_text)
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 
-## 2017-11-16 逻辑思维-2016跨年演讲-时间的朋友
+## 2017-11-16/18 逻辑思维-2016跨年演讲-时间的朋友&冬吴相对论
+ - 德国的工业：工业4.0提出者，1200家隐性冠军企业，最重要的是教育，人才的培养模式，从小学毕业后开始职业教育，上大学只有一小部分人
+ - 游戏化生活方式、商业化游戏的未来
  - 认知升级
  - 毁灭自己的方式就是不成长
  - 吴军：即有目标，也关注当下，自律非常好（时间管理）
