--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,5 +1,17 @@
 # 工作笔记、备忘，包括技术、管理等
 
+## 2017-11-23 ~ 11-26 [部署almvm](https://almvm.azurewebsites.net/)
+- jekyll，本地构建对于不了解Ruby的还是有点麻烦
+- [神器 jekyll-azure-deploy,创建AZ应用，导入代码，漫长的等待，然后就可以了~这么神奇](https://github.com/ritterim/jekyll-azure-deploy)
+- [Running Jekyll on Windows & Azure](https://kencenerelli.wordpress.com/2017/03/11/running-jekyll-on-windows-azure/)
+- [Deploying Jekyll to Windows Azure App Services](https://rimdev.io/deploying-jekyll-to-windows-azure-app-services/)
+- [6 ways to go from Markdown to Azure Web App](http://www.frankysnotes.com/2016/03/6-ways-to-go-from-markdown-to-azure-web.html)
+ 
+- cygwin，Win上执行Linux命令：https://cygwin.com/install.html
+
+
+## 2017-11-19 ~ 11-22 深圳 Azure DevOps Bootcamp 培训
+
 ## 2017-11-15  [Azure DevOps Bootcamp](http://labs.devopshub.cn/Curriculums/1)
 - [Lab](http://labs.devopshub.cn/)
 - [docker microsoft镜像](https://hub.docker.com/r/microsoft/aspnetcore/)
