--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -79,7 +79,8 @@
  - [VSTS/TFS extension](https://documentation.red-gate.com/rr1/installing/vsts-tfs-extension)
  - [tsqlt red-gate 使用这个工具做SQL的UT](http://tsqlt.org/)
  - [使用tSQLt进行SQL Server单元测试](http://server.zol.com.cn/273/2734477.html)
- 
+- Flyway: [(TFS)集成Flyway，实现数据库的版本管理](http://www.cnblogs.com/danzhang/p/7748070.html?from=groupmessage) 
+
 ## 2017-11-6 LeanSoft 第五周练习
 - MDWIKI MasBuild componentster 分支 构建报错：grunt error: cannot find module 'load-grunt-tasks'
 - [stackoverflow](https://stackoverflow.com/questions/28385685/grunt-error-cannot-find-module-load-grunt-tasks)　　　　　　　　[load-grunt-tasks出错](http://www.imooc.com/qadetail/65092)　　　　　　　　[yeoman运行grunt serve 提示错误](http://www.cnblogs.com/ayseeing/p/4419447.html)　　　　
