--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -1,6 +1,7 @@
 # 笔记 2017-09-23 今年最近的一些讲座资料汇总
 
 ## 书籍
+ - [想当厨子的生物学家是个好黑客](https://book.douban.com/subject/20647000/)
  - [学习敏捷-构建高效团队](https://book.douban.com/subject/26979886/)
  - [DevOps架构师行动指南 导读](https://mp.weixin.qq.com/s?__biz=MjM5NjQ4MzI5MA==&mid=2650585290&idx=1&sn=7506625425f9cc18fe1c6dcfddb7c0d0&chksm=bee0817f89970869dfbd7caa45aa6aaef3a73d84f10544ee96045c8a188b7d63088724ecd7cc&mpshare=1&scene=1&srcid=09265joh2Aq8YF6EREhZ4oNo&pass_ticket=88Ll6icYrFUsbphRjUMjDIvw9oQjDVYn1vW3ZiKDbjx7cbF3GKS3HzzlP5%2B1NG7l#rd)
  - [精益产品开发(原则方法与实施) 何勉](https://book.douban.com/subject/27116921/)
@@ -14,6 +15,14 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 
 ## 2017-11-16/18 逻辑思维-2016跨年演讲-时间的朋友&冬吴相对论
+ - [生物黑客](http://biohackingbook.com/complimentary-sleep-chapter/)
+ - 黑客精神：永不满足现状、强烈探索的欲望、对自由无止境的追求
+ - [理解开源，必读的“四书五经”](https://linux.cn/article-3014-1.html)
+ - [奏响开源时代的华章——《大教堂与集市》简体中文版书评](https://linux.cn/article-3255-1.html?pr)
+ - [TED 视频： 生物黑客 你也可以](https://www.ted.com/talks/ellen_jorgensen_biohacking_you_can_do_it_too/transcript?language=zh-cn)
+ - [开源世界旅行手册](https://i.linuxtoy.org/docs/guide/)
+ - [ESR五部曲之三——How To Become A Hacker 如何成为一名黑客](http://blog.csdn.net/hymalaya/article/details/906059)
+
  - 德国的工业：工业4.0提出者，1200家隐性冠军企业，最重要的是教育，人才的培养模式，从小学毕业后开始职业教育，上大学只有一小部分人
  - 游戏化生活方式、商业化游戏的未来
  - 认知升级
