--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,4 +1,15 @@
 # 工作笔记、备忘，包括技术、管理等
+## 2017-11-27 ~ 12-01
+- [powershell 脚本适配 linux sh脚本](https://technet.microsoft.com/zh-cn/library/bb463207.aspx) 
+- [Converting from Powershell to Bash](http://moharotechtips.blogspot.com/2016/01/converting-from-powershell-to-bash.html)
+- [app-insights-api Evnt](https://docs.microsoft.com/zh-cn/azure/application-insights/app-insights-api-custom-events-metrics#page-views)
+- url 问号后面改变时的事件：$(window).bind('hashchange', function () {}
+
+## PowerShell 基础
+- [了解重要的 Windows PowerShell 概念](https://docs.microsoft.com/zh-cn/powershell/scripting/getting-started/fundamental/understanding-important-windows-powershell-concepts?view=powershell-5.1)
+- [PowerShell 语法](http://www.cnblogs.com/chsword/archive/2011/10/17/PowerShell_3.html)
+- [Windows PowerShell基本语法及常用命令](http://blog.csdn.net/mr_pang/article/details/50571866)
+
 
 ## 2017-11-23 ~ 11-26 [部署almvm](https://almvm.azurewebsites.net/)
 - jekyll，本地构建对于不了解Ruby的还是有点麻烦
