--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,4 +1,127 @@
 # 工作笔记、备忘，包括技术、管理等
+
+## 2017-12-02 博时汇报&培训-基于TFS的DevOps培训
+### 敏捷开发概述
+- 敏捷开发背景
+**制造业时代(50s之前)->分销时代(70s)->信息时代(90s)->用户时代**
+国内：2010年左右开始，起源于诺基亚
+- 敏捷价值观
+敏捷宣言左边重于右边，但并不是说右边不重要
+- CMMI过程和敏捷是两个维度（？）
+- 科技的发展，规模经济的发展导致了技术和开发思想的出现
+- 交付速度跟不上市场的步骤，特别是互联网出现之后
+- 研发过程、或者产出的结果无效导致浪费
+- 新需求是以往的需求缺陷或是BUG造成的，大部分浪费在了发现和修复缺陷，单个BUG成本过高。60%~80%的浪费
+- 哪些浪费：
+    - 库存：中间产品、在制品，始终没有交付给用户
+    - 过度生产：功能丰富、功能主动的
+    - 额外流程、突发性的、依赖导致
+    - 知识传递、沟通，知识断层
+    - 专注、任务的切换
+    - 等待 
+    - ？
+
+- 软件开发过程的特别
+知识创造性组织与传统制造业不一样，基于智力的创造和基于流程的生产制造的过程有着本质的不一样，所以以制造业的方法来开发软件是行不通的，是对于不确定性的管理
+
+- 敏捷重新定义了管理
+原来的管理方式是：认为世界是确定的，是线性，过程是可管理的
+- 用户无法感知软件，软件并不是实体，所以用户对软件的认知只限于表层，实现过程很难理解，不认可软件创建过程中价值
+- 不可变因素：价值和质量，可变因素：时间、范围、成本。世界是变化的，不确定的，博弈论
+- 传统开发模式*敏捷式开发模式，对应两种人生观，即线性人生观和可变化的人生观
+- 建立全局的ALM视野，跳出自己的位置看待世界。实施和咨询：给一些糖衣炮弹，不是咨询师推着客户走，而是由客户拉动，咨询过程本身也和敏捷实施思想相匹配
+- 缩小管理单元：包括每个阶段，用简单的方法管理复杂过程
+- 效率提升三大法定：【缩小管理粒度、工程解藕】->提交效率
+- 从下往上，形成适合团队的流程，在推广到其他团队，适配；从上往下，管理理念和文化的影响和支持
+- 管理知识者，服务式、引导式，而不是控制与命令式，彼得·德鲁克说过：
+    - 知识工作者本身处理最佳决策位置
+    - 知识工作者必须自我管理、必须自治
+    - 持续创新也是知识管理者工作的一部分
+    - 知识工作者必须被聆听和尊重
+- [书籍《卓有成效的管理者》](https://book.douban.com/subject/4020857/)
+不是只有管理别人的人才称得上是管理者，在当今知识社会中，知识工作者即为管理者，管理者的工作必须卓有成效
+
+### DevOps 概述
+- 起源 2009年 Partrick,运维敏捷化
+- DevOpsDays
+    - [DevOpsDays 中国](http://www.devops-master.com/?cate=4)
+    - [DevOpsDays 全球](https://www.devopsdays.org/)
+    - [DevOpsDays 台湾](https://devopsdays.tw/)
+    - [DevOpsDays 2017中国活动资料](https://www.huodongjia.com/event-1452630998.html)
+- DevOps实践小说：《凤凰项目》
+- DevOps快速交付与企业的成功有多大关系？
+微软VisualStudio发布节凑的变化
+- DevOps 来源于社区的实践，自发形成的体系，与敏捷不同，有固定的宣言和提出者
+- 广义的DevOps：DevOps金字塔：价值观-原则-方法-实践-工具；上层是敏捷精益思想，下层是实践和工具，通过实践进行衔接
+- DevOps金字塔：
+    - 从顶层统一价值观
+    - 通过制定原则体现价值观
+    - 方法是从实践中抽象与提取的
+    - 最佳实践是别人的，适合自己的需要自己去实践。在没有实践的经验是别人的
+    - 工具：在不同的领域有不同的工具，工具不是万能的，需要整个工具链的支撑
+- DevOps 重要实践：基础设施即代码（Instruction/Configuration as code）
+- 现代的云平台（IAAS、PAAS）无法提供环境代码的即不能称为真正意义的云，自动化的调度平台才是自动化的基础
+- DSC
+- 实施策略：人：涉及到哪些人，需要怎么样的能力准备；过程：人与人的交互，怎么样的过程才是合理的；工具：如何支撑，哪些工具，工具与工具，工具与人的关系
+- 实施后的效果的衡量标准
+    - 生产能力-交付能力：发布频率,发布完成时长
+    - 稳定性指标:平均修复时间
+
+### 看板方法
+- 精益制造：从汽车下单那时起，拉到整个制造过程，是下游拉到上游戏的过程，整个过程通过信号卡，告诉上游戏所需要的配件使整个过程更顺畅
+    - 控制库存，也就是限制在制品
+    - 加速流动
+    - 灵活应对
+    - 促进改进
+拉动式生产方式，即看板方法
+- 信号板适合软件产品开发？
+- 拉动式生产是否能解决软件产品交付中的问题
+- 看板方法五个实践
+    - 分析价值
+    - 可视化价值流动
+    - 显示化转化规则，让价值流动起来
+    - 限制在制品WIP
+    - 管理流动
+    - 识别问题和瓶颈
+    - 解决问题和瓶颈、建立反馈机制、持续改进
+### Scrum
+- Scrum管理模型：Scrum 合约、迭代+四个会议
+- 看板站会，看板只是工具，将工作内容可视化，辅助协作，提升协作效率，提前暴露问题，同时也提升团队的积极性。同时团队关注的是整体的目标，也就是整个团队所做的事情，提倡团队跳出本位思考和工作。还可以识别技术性问题，如复用、技术债务
+
+### 问题
+- 微软对反馈的响应速度：定位
+- 上线时调整发布内容
+- 合并冲突是合并到Master提示？
+- Scrum 是什么意思？与敏捷的关系？
+- 如何成本与效果的平衡？产出如何衡量？好处和信心 价值的收益：长期收益
+- 培训，是否要将业务人员拉进来，如果导入敏捷？
+- 敏捷团队对于人员是否要求全职？开发和测试必须全职，不可同时兼多个项目
+- SM:专职，不可做开发工作，这样会导致视角只专注开发 PM=PO+SM
+- tfs看板有什么统计功能？
+- SM的绩效：来源于发现了多少问题，提出多少解决方案，改进的效果如何
+- 外包模式：利益、目标要一致，建议尽量驻场外包
+- 会议占用了很多时间
+- PO 的素质和能力：
+
+### 持续交付
+
+- 软件开如上的三级耦合
+
+    - 代码级耦合
+    - 组件级耦合
+    - 服务级耦合
+- 团队架构：单体构架还是微服务架构
+- 技术架构-特性团队-业务架构
+- 
+## 培训过程
+- 把理论说清楚
+- 对待提问需敏锐的觉察，快速理解所处的场景和上下文，了解根本问题，并给出答案。需准确的判断提问者所处的层次，引导其思考并完善认知
+- 我就是权威，敢于指正思维的上的认知缺陷
+
+## 海X投标
+- 顾问最重要的能力：分析问题：学会问问题、解决问题能力：实践、规划能力：协调资源
+- 渗透沟通，参与整个过程，熟悉投标过程
+
 ## 2017-11-27 ~ 12-01
 - [powershell 脚本适配 linux sh脚本](https://technet.microsoft.com/zh-cn/library/bb463207.aspx) 
 - [Converting from Powershell to Bash](http://moharotechtips.blogspot.com/2016/01/converting-from-powershell-to-bash.html)
@@ -9,7 +132,7 @@
 - [了解重要的 Windows PowerShell 概念](https://docs.microsoft.com/zh-cn/powershell/scripting/getting-started/fundamental/understanding-important-windows-powershell-concepts?view=powershell-5.1)
 - [PowerShell 语法](http://www.cnblogs.com/chsword/archive/2011/10/17/PowerShell_3.html)
 - [Windows PowerShell基本语法及常用命令](http://blog.csdn.net/mr_pang/article/details/50571866)
-
+- [linux cmd](https://i.linuxtoy.org/files/pdf/fwunixref.pdf)
 
 ## 2017-11-23 ~ 11-26 [部署almvm](https://almvm.azurewebsites.net/)
 - jekyll，本地构建对于不了解Ruby的还是有点麻烦
