--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -14,6 +14,10 @@
  - [敏捷企业 作者访谈录 英文书 目前无中文版](http://www.infoq.com/cn/articles/book-review-agile-enterprise?utm_campaign=rightbar_v2&utm_source=infoq&utm_medium=articles_link&utm_content=link_text)
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 
+## 最近茅台洒股份飙升
+- 投资：如果十年前买些茅台，现在会值多少钱？
+- 茅台现在具有社交属性，受众为中产阶级
+
 ## 2017-11-16/18 逻辑思维-2016跨年演讲-时间的朋友&冬吴相对论
  - [生物黑客](http://biohackingbook.com/complimentary-sleep-chapter/)
  - 黑客精神：永不满足现状、强烈探索的欲望、对自由无止境的追求
