--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -14,18 +14,33 @@
  - [敏捷企业 作者访谈录 英文书 目前无中文版](http://www.infoq.com/cn/articles/book-review-agile-enterprise?utm_campaign=rightbar_v2&utm_source=infoq&utm_medium=articles_link&utm_content=link_text)
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 
+## Docker 系统学习资料
+
+- [容器 - 使用 Docker 让传统 .NET 应用程序现代化](https://msdn.microsoft.com/magazine/mt797650)
+- [20 个为桌面用户准备的令人惊叹的 Docker 容器 ](https://goreliu.github.io/yi-20-ge-wei-zhuo-mian-yong-hu-zhun-bei-de-ling-ren-liang-tan-de-docker-rong-qi.html)
+- [Docker实战](http://programmer.zhujunwu.cn/article/23453)
+- [如何在Docker容器中运行GUI程序](https://linux.cn/article-5304-1.html)
+
 ## 最近茅台洒股份飙升
 - 投资：如果十年前买些茅台，现在会值多少钱？
 - 茅台现在具有社交属性，受众为中产阶级
 
-## 2017-11-16/18 逻辑思维-2016跨年演讲-时间的朋友&冬吴相对论
+## 关于黑客文化
  - [生物黑客](http://biohackingbook.com/complimentary-sleep-chapter/)
+ - [TED 视频： 生物黑客 你也可以](https://www.ted.com/talks/ellen_jorgensen_biohacking_you_can_do_it_too/transcript?language=zh-cn)
+
  - 黑客精神：永不满足现状、强烈探索的欲望、对自由无止境的追求
  - [理解开源，必读的“四书五经”](https://linux.cn/article-3014-1.html)
  - [奏响开源时代的华章——《大教堂与集市》简体中文版书评](https://linux.cn/article-3255-1.html?pr)
- - [TED 视频： 生物黑客 你也可以](https://www.ted.com/talks/ellen_jorgensen_biohacking_you_can_do_it_too/transcript?language=zh-cn)
+
  - [开源世界旅行手册](https://i.linuxtoy.org/docs/guide/)
  - [ESR五部曲之三——How To Become A Hacker 如何成为一名黑客](http://blog.csdn.net/hymalaya/article/details/906059)
+ - [黑客与画家：硅谷创业之父Paul Graham文集](http://www.ituring.com.cn/book/39)
+ - [Facebook“黑客文化”最全解读,这样独一无二的企业文化,你学的来吗?](http://www.sohu.com/a/142933344_165191)
+ - [硅谷归来3：硅谷的自由精神和黑客文化](https://www.huxiu.com/article/100508/1.html)
+ - [敏捷开发文库-优秀公司的实践(二)](https://wenku.baidu.com/view/0fdd5e186edb6f1aff001ffc.html)
+ 
+## 2017-11-16/18 逻辑思维-2016跨年演讲-时间的朋友&冬吴相对论
 
  - 德国的工业：工业4.0提出者，1200家隐性冠军企业，最重要的是教育，人才的培养模式，从小学毕业后开始职业教育，上大学只有一小部分人
  - 游戏化生活方式、商业化游戏的未来
@@ -77,3 +92,60 @@
  - [OKR新8问：OKR落地过程中有哪些“坑”？](https://mp.weixin.qq.com/s?__biz=MzAxNTc3OTg2Nw==&mid=2651475851&idx=1&sn=0d6da498c415a8ff2275f0de38ff0f2a&chksm=80003effb777b7e9aac00ee6ccba25b33572fd51a380f90dd04c6aaecab4fcbea89e5e1f775d&mpshare=1&scene=1&srcid=0928Pz0kEdlkcYmAi36Qd7Dp&pass_ticket=phpV3MHMTFaJxUc2rEQ7yP%2FFydZnMmurxPReTCytDDHf2X68pCx5Qi49gX689z8A#rd)
  - [基于OKR的绩效管理 —— 创造绩效而非仅是考核](https://mp.weixin.qq.com/s?__biz=MzAxNTc3OTg2Nw==&mid=2651475976&idx=1&sn=e26d58063bdb3d5d8d53963b15daa484&chksm=8000217cb777a86af87224bafaa8b84fc4423f7f8e5863f27bdec58584ee865c27c7273ae66e&mpshare=1&scene=24&srcid=0916bZMo4FAhhqutBJTtNm73&pass_ticket=phpV3MHMTFaJxUc2rEQ7yP%2FFydZnMmurxPReTCytDDHf2X68pCx5Qi49gX689z8A#rd)
  - [姚琼读书笔记： OKR与《敏捷革命》](http://blog.sina.com.cn/s/blog_140d018570102x3ju.html)
+
+
+## 2017-09-13 开放平台接口调用频次限制
+[高并发系统设计之开放平台API接口调用频率控制系统](http://blog.csdn.net/joeyon1985/article/details/47084083)
+[微博开放平台 接口访问频次权限](http://open.weibo.com/wiki/Rate-limiting)
+[微信开放平台 接口调用频次限制说明](https://mp.weixin.qq.com/wiki?t=resource/res_main&id=mp1433744592)
+[轻型的接口访问频率限制服务模型的设计与实现](http://www.cnblogs.com/jimcsharp/p/5534840.html)
+[怎么保证对外暴露接口的安全性(调用频率限制)](https://segmentfault.com/q/1010000002938194)
+[API 调用频次限制怎么实现？](https://www.v2ex.com/t/124433)
+
+## 2017-09-12 TDD&&BDD 相关资料
+[TDD 已死？让我们再聊聊 TDD](http://blog.jobbole.com/110560/)
+[浅谈测试驱动开发（TDD）](https://www.ibm.com/developerworks/cn/linux/l-tdd/)
+[用消费者驱动的契约进行面向服务开发](http://www.infoq.com/cn/articles/consumer-driven-contracts)
+[从 TDD 到 BDD](http://www.tuicool.com/articles/MBfaInr)
+[TDD 生存手册](http://www.tuicool.com/articles/MBfaInr)
+[也谈TDD，以及三层架构、设计模式、ORM……：没有免费的午餐](http://www.tuicool.com/articles/aAFnyy6)
+[Microsoft Blogs 上 TDD 的戰文...](http://www.tuicool.com/articles/IVRJ7zM)
+[TDD，BDD and ATDD](http://www.tuicool.com/articles/QNZfqiV)
+[BDD工具SpecFlow版本2支持并行执行](http://www.tuicool.com/articles/J3MFJv)
+[对结合BDD进行DDD开发的一点思考和整理](http://www.tuicool.com/articles/yYZB3m7)
+[BDD工具Cucumber并不是一种测试工具](http://www.tuicool.com/articles/JJ7VRjR)
+[为什么BDD可以拯救敏捷](http://www.tuicool.com/articles/iYjUvum)
+
+## 2017-09-02 OAuth&OpenID 相关资料
+[Oauth 标准官网](https://oauth.net/2/)
+[OAuth与OpenID区别和使用场景](https://www.zhihu.com/question/19628327)
+[Oauth原理介绍](https://www.biaodianfu.com/learn-oauth.html)
+[Oauth原理介绍2](http://www.jianshu.com/p/976e8aba49a0?utm_source=tuicool&utm_medium=referral)
+[Oauth原理介绍3](http://www.tuicool.com/articles/QviMR3N)
+[OAuth的机制原理讲解及开发流程](http://www.jianshu.com/p/bd9e7962bba3)
+[【译文】OAuth 2 介绍-各种授权模式](http://www.jianshu.com/p/5978e727dbc0)
+[理解OAuth 2.0](http://www.ruanyifeng.com/blog/2014/05/oauth_2_0.html)
+[##开放平台鉴权以及OAuth2.0介绍](https://my.oschina.net/Barudisshu/blog/291962)
+[OAuth2.0详解](http://www.cnblogs.com/shijingjing07/p/5853770.html)
+[移花接木：针对OAuth2的攻击](http://www.tuicool.com/articles/UVRF3yV)
+[Oauth实现 Net版](https://github.com/IdentityServer/IdentityServer3)(https://msdn.microsoft.com/zh-cn/magazine/dn451439.aspx)
+[基于OWIN+DotNetOpenOAuth实现OAuth2.0](http://www.cnblogs.com/dannyH/p/4170498.html)
+
+### 实现分析（分析和设计）
+[Oauth2.0 服务端开发的一些思路](https://zhuanlan.zhihu.com/p/21807506)
+[OAuth2.0 学习（二） Server 设计](http://blog.csdn.net/passwordport/article/details/19557807)
+[oauth2.0服务端与客户端搭建](http://www.cnblogs.com/doubilaile/p/5066916.html)
+[OAuth 2.0 - 访问新浪、腾讯的资源服务器](http://www.cnblogs.com/highend/archive/2012/07/10/oauth2_access_sina_and_tencent_resource_server.html)
+[写了一个OAuth2.0服务器端的实现](http://blog.sina.com.cn/s/blog_7de05c0501017k1d.html)
+
+## 2016-09-19 软件架构 相关资料
+[软件架构模式 gitbook](https://www.gitbook.com/book/bboyfeiyu/software-architecture-patterns/details)
+[软件架构发展1](http://www.it610.com/article/3555337.htm)
+[iOS 架构模式 - 简述 MVC, MVP, MVVM 和 VIPER (译)](https://blog.coding.net/blog/ios-architecture-patterns)
+[软件架构发展趋势和现状](http://www.wtoutiao.com/p/1e4yfmd.html)
+[在过去几年中，微服务悄然却坚定地在拥挤的软件架构市场上占据了一席之地](http://www.tuicool.com/articles/ZfMnErb)
+[迈向敏捷软件架构](http://www.tuicool.com/articles/zEB3um)
+
+
+![](http://images.cnblogs.com/cnblogs_com/gaojing/tt.jpg)
+![](http://images.cnblogs.com/cnblogs_com/gaojing/tt.jpg)
