--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -13,6 +13,12 @@
  - [敏捷革命：提升个人创造力与企业效率的全新协作模式](https://book.douban.com/subject/27008697/)
  - [敏捷企业 作者访谈录 英文书 目前无中文版](http://www.infoq.com/cn/articles/book-review-agile-enterprise?utm_campaign=rightbar_v2&utm_source=infoq&utm_medium=articles_link&utm_content=link_text)
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
+- [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
+
+## 财经郎眼 1210
+- 品牌发展需要与时俱进
+碎片化时代 万物互联的时代 场景化时代，气质大于品质，品牌需要赋予内涵赋予价值，是企业价值观的载体，企业通过产品与消费者连接
+- 品牌定位理论，品牌又可以延伸，内涵丰富，不能盲目的多元化，
 
 ## Docker 系统学习资料
 
