--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -17,8 +17,9 @@
 
 ## 财经郎眼 1210
 - 品牌发展需要与时俱进
-碎片化时代 万物互联的时代 场景化时代，气质大于品质，品牌需要赋予内涵赋予价值，是企业价值观的载体，企业通过产品与消费者连接
-- 品牌定位理论，品牌又可以延伸，内涵丰富，不能盲目的多元化，
+碎片化时代 万物互联的时代 场景化时代，气质大于品质，品牌需要赋予内涵赋予价值，是企业价值观的载体，企业通过产品与消费者连接。中国虽然已经成为第二经济体，但品牌未形成响应
+- 品牌定位理论，品牌又可以延伸，内涵丰富，不能盲目的多元化，品牌与粉丝共鸣，品牌最高的境界是产生情感依赖，奢侈品需要长时间的品牌积累
+- 麦当劳改名金拱门
 
 ## Docker 系统学习资料
 
