--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,6 +15,9 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+## 中国教育
+为孩子减负，只停留在局部，最终还是应试教育，重视分数，整个教育系统需要全局优化。局部优化导致受挫时又回到了老路子。有家长网友反应“我们小时候就开始做作业了，现在还要陪小孩做作业，导致家长没有了自己的生活，工作也受影响。
+
 ## 财经郎眼 1210
 - 品牌发展需要与时俱进
 碎片化时代 万物互联的时代 场景化时代，气质大于品质，品牌需要赋予内涵赋予价值，是企业价值观的载体，企业通过产品与消费者连接。中国虽然已经成为第二经济体，但品牌未形成响应
