--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,6 +15,9 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+## 对于女德班现象
+对传统文化的认知需要与当前社会的价值观相匹配并进行升级，不能全然接受
+
 ## 中国教育
 为孩子减负，只停留在局部，最终还是应试教育，重视分数，整个教育系统需要全局优化。局部优化导致受挫时又回到了老路子。有家长网友反应“我们小时候就开始做作业了，现在还要陪小孩做作业，导致家长没有了自己的生活，工作也受影响。
 
