--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,5 +1,14 @@
 # 工作笔记、备忘，包括技术、管理等
 
+## Team Foundation Server 数据仓库相关
+
+- [https://msdn.microsoft.com/zh-cn/library/ms244706(v=vs.120).aspx](管理 TFS 报表、数据仓库和 Analysis Services 多维数据集)
+- [重新生成数据仓库和 Analysis Services 多维数据集](https://msdn.microsoft.com/zh-cn/library/cc668753.aspx)
+- [为Team Foundation Server 手动处理数据仓库和 Analysis Services 多维数据集](https://msdn.microsoft.com/zh-cn/library/ff400237.aspx)
+
+
+## X关投标过程总结
+
 ## 2017-12-02 博时汇报&培训-基于TFS的DevOps培训
 ### 敏捷开发概述
 - 敏捷开发背景
