blog\3games\xbox1s.md

--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -2,7 +2,7 @@
 
 ## Team Foundation Server 数据仓库相关
 
-- [管理 TFS 报表、数据仓库和 Analysis Services 多维数据集](https://msdn.microsoft.com/zh-cn/library/ms244706(v=vs.120).aspx)
+- 管理 TFS 报表、数据仓库和 Analysis Services 多维数据集: https://msdn.microsoft.com/zh-cn/library/ms244706(v=vs.120).aspx
 - [重新生成数据仓库和 Analysis Services 多维数据集](https://msdn.microsoft.com/zh-cn/library/cc668753.aspx)
 - [为Team Foundation Server 手动处理数据仓库和 Analysis Services 多维数据集](https://msdn.microsoft.com/zh-cn/library/ff400237.aspx)
 
