--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,5 +1,11 @@
 # 工作笔记、备忘，包括技术、管理等
 
+## 微软研发云InfoQ直播
+- 能力维度
+- 横向推广：先扩散，有兴趣在来找团队，然后在讲，然后自己决定是怎么样来
+- 运维：运维服务->运维能力输出
+- 实施：先固化，在优化
+
 ## Team Foundation Server 数据仓库相关
 
 - 管理 TFS 报表、数据仓库和 Analysis Services 多维数据集: https://msdn.microsoft.com/zh-cn/library/ms244706(v=vs.120).aspx
