--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,6 +15,13 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+
+## 两性
+- 性与心理需求能满足吗？
+越容易说出来的需求越容易满足
+- 忽略情感的亲密，以为很亲密了
+- 能在心理上和对方保持独立吗
+
 ## 对于女德班现象
 对传统文化的认知需要与当前社会的价值观相匹配并进行升级，不能全然接受
 
