--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,6 +15,11 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+## markdown
+ - [doctoc 根据MD文件生成导航链接](https://github.com/thlorenz/doctoc)
+ - [makecode](https://makecode.com/writing-docs)
+ - [Microsoft MakeCode (PXT - Programming eXperience Toolkit) ](https://github.com/Microsoft/pxt)
+ - [docfx,从C#代码中提取注释生成文档，支持MD文件，Sandcastle的替换品](https://dotnet.github.io/docfx/tutorial/docfx_getting_started.html )
 
 ## 两性
 - 性与心理需求能满足吗？
