--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,5 +1,53 @@
 # 工作笔记、备忘，包括技术、管理等
 
+## XPV实施/咨询第一周
+
+## 第四天 01-05 周五
+- 上午一边安装测试环境，一边做备份、恢复，同时也一边写文档。工作效率还行，一边操作一边写文档，遇到问题先记下，大体先把文档操作部分写完，有问题的下午的补上
+- 上午遇到一个问题：备份成功的邮件通知会发给预期外的人员，整个过程如下：
+    - 客户反馈有一大部分人收到了邮件通知，于是在询问为什么会发给这么多人
+    - 我第一时间查找原因，然后查看了系统帐号和组，但不够仔细，未找出原因
+    - 后来与客户语音联系，有一点点不知道怎么说，但最后是要查找原因
+    - 然后与同事联系，他给了些思路，于是找到了原因：Administrators组下包含了Domain Admin组，而邮件通知是发给了Administrators组，帮产生了问题。细想一下其实初次进入项目，有一点点慌，静下来应该能找到原因。
+- 下午重点是还原操作，期间遇到了些问题总结下：
+    - 因为之前没有作过这方面练习，操作部分未不太熟悉
+    - 没有做预先准备、查看文档，虽然XX给了份文档，但文档不太详细
+    - 应该先把操作流程了解清楚
+- 下午的问题是：
+    - 还原TFS备份到测试环境时，ReportServer和ReportServerTempDb 无法通过还原的方式恢复Sql Server Report Service，运行时报 Scale Out Deployment的问题，最后确认算是TFS的SqlServer Standard版本的一个BUG，迁移当成了集群部署，集群部署Standard不支持，参考地址
+- 将TFS还原到不同的机器：先备份到共享目录，备份SSRS Key，停止TFS项目集合，停止TFS应用服务，停止Reporting Service，修改TFS四个数据库名称，还原数据库，启动 Reporting Service ,启动TFS应用服务，验证
+
+## 第一天 01-02
+- 启动会议，接口人向各部门负责人讲解本次实施内容及目录，讲解需要各部分负责人协助和配合的时间节点、需要准备的材料等。在会议中询问的问题：
+- 需要提前了解的问题（不限于会议中）：
+    - 倾向的TFS版本，包括Version和Edtion，一般建议最新发布的企业版
+    - 倾向的语言版
+    - 环境的部署方式：单机、简单双机、复杂高可用，一般建议简单双机
+    - 企业内部是否有AD域，各环境的服务器是否与现有AD域集成，建议集成,并新增TFS域账户
+    - 异地开发人员网络连接方式：通过互联网还是专线局域网
+    - 是否有企业级硬件、软件级备份机制？建议与TFS自有的备份机制集成
+    - 各部门所负责的系统有哪些，有哪些特色，需统计代码量（所占空间）、源码仓库数量，选出试点项目
+    - 采用何种源码工具，是否有倾向？一般建议采用git
+- 编写部署规划文档：内容包括概述、拓扑图、帐户说明、环境说明、灾备机制
+
+
+## 第二天 01-03
+- 第一天的未确认的内容
+    - 数据库的Version和Edition，昨天晚上确认的，但早上才得知
+    - SMTP配置信息，晚上已经确认
+    - 需要设置为管理员的帐户，晚上已经确认
+- 上午：部署规划Review会议
+    - 客户对于为什么需要服务帐户和管理帐户及为什么要添加到域中有较大疑惑，问得比较仔细，同事花了不少时间来解释。**感受：** 首先是求知精神，之其然并知其所以然，同时明白对于申请资源也有了明确的理由，其次信任，因为是新客户，信任未建立，一方面做为顾问，应该主动获取关于客户的情况，营造一种积极、专业的印像。另一方面，需洞察客户对细节追问的原因，尽可能的使双方站在同一层次和同一目标上沟通，解答时充分展示出专业知识能力
+    - 与客户沟通时，第一天感觉未打开，第二天后稍好些。感觉是对新环境不能快速适应，对于不确定性的一种本能保护，无法很好的表达能力，也不能很好的思考
+- 下午：部署环境，总体还算顺利，遇到域帐户无法验证通过的问题。**感受：**：对于帐户，感觉是不是应该提前沟通清楚，是否能在部署前准备好？
+- 感受：对于参与此项目，在开始时客户背景，之前进展的情况，已经做了哪些工作，没有获取到，应该关人了解清楚。来到这里后，也没有要求做客户背景介绍，直接就开干
+
+## 第三天 01-04
+- 上午安装测试环境，配置环境，还算顺利
+- 下午写文档，还算顺利
+- 问题
+    - 用域帐户登陆后，配置数据库时无法连接到数据库，应该是域帐户权限问题 **以后模拟**
+
 ## 微软研发云InfoQ直播
 - 能力维度
 - 横向推广：先扩散，有兴趣在来找团队，然后在讲，然后自己决定是怎么样来
@@ -14,8 +62,12 @@
 
 
 ## X关投标过程总结
+- 研读标书，分析需求点，制定应对解决方案
+- 研究解决方案中的技术点，做一定的程度的验证
+- 文档编写：引入的工具能做什么、如何实现需求、实现的程度
+- 文档是细致活，尽量保证自己读一次，特别是拼凑文档内容时
 
-## 2017-12-02 博时汇报&培训-基于TFS的DevOps培训
+## 2017-12-02 博X汇报&培训-基于TFS的DevOps培训
 ### 敏捷开发概述
 - 敏捷开发背景
 **制造业时代(50s之前)->分销时代(70s)->信息时代(90s)->用户时代**
