--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,11 +15,23 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+## 2018-01-06 广州敏捷之旅 总结
+报名参加了 上午和下午的工作坊：设计思维和管理3.0 。总体感觉只是体验了一下，对其中的内容及理论并未做讲解，最大的收获是感受到工作坊的氛围，亲身体验了工作坊，感觉还不错，挺有趣的
+
+**相关资料**
+- [活动介绍](http://www.huodongxing.com/event/6419745911500)
+- [活动回顾](http://mp.weixin.qq.com/s/PIogu6I6V57pF73Q-uUAdQ)
+
+**上午设计思维**
+设计思维是一种方法论，包括一系列的实践，可以用于产品设计，包括各种实物、系统、软件、APP，甚至是某些特定问题的解决方案
+
+**下午管理3.0**
+
 ## markdown
  - [doctoc 根据MD文件生成导航链接](https://github.com/thlorenz/doctoc)
  - [makecode](https://makecode.com/writing-docs)
  - [Microsoft MakeCode (PXT - Programming eXperience Toolkit) ](https://github.com/Microsoft/pxt)
- - [docfx,从C#代码中提取注释生成文档，支持MD文件，Sandcastle的替换品](https://dotnet.github.io/docfx/tutorial/docfx_getting_started.html )
+ - [docfx,从C#代码中提取注释生成文档，支持MD文件，Sandcastle的替换品](https://dotnet.github.io/docfx/tutorial/docfx_getting_started.html)
 
 ## 两性
 - 性与心理需求能满足吗？
