--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,5 +1,31 @@
 # 工作笔记、备忘，包括技术、管理等
 
+## XPV实施/咨询第二周
+
+## 第二周第1、2天 01-8、01-9 访谈
+了解各部门现有发版流程，讲解TFS/GIT，演示使用Git PR 来做源码版本管控
+
+**面临的问题**
+- 目前都采用手工部署
+- 都是单一源码库，未分Dev、UAT、Prod环境
+- 包含VS、Java、Delphi等项目
+- 大部分对Git接受度还行，但有一个部门，只有一个测试环境，创建多个测试环境有困难（技术、流程两个角度都有困难），进生产的过程不可控，受其他部门制约（客户），很被动，而且有并行开发的情况，在上最终上生产环境的需求开发这边不可控，有可能只上并行开发中的一个，也有可能上多个并行开发的版本，导致上生产时需要手工去拆代码
+
+**个人的感想**
+- 访谈前对客户的背景和组织架构不太清楚，没有特意去了解，访谈时也没有针对性的去询问
+- 访谈前没有准备访谈问题列表，也没有就访谈内容进行清楚的确认
+- 对各部门内的团队结构、开发模式、流程，涉及到的业务系统，各业务系统的特性未做太多的了解
+- 访谈过程问的问题比较随意，有时候很多说清听得不太清楚明了
+- 客户会面临流程问题和技术问题，访谈时需正确的分析并确定是技术问题还是流程问题，如果是流程问题时，应该深入去了解整个开发流程中涉及到的部门。如果流程上有问题，对流程改进提供一些建议
+- 访谈前准备不够，没有根据目标去分析需要准备什么样的资料，并在讲解时保证有可show和演示的东西
+- 永远只把可选择的方案提出来，并对建议的做重点的讲解，并让各客户各部门在内容进行决策
+- 演示应该对所需要的环境提出要求，如网络环境
+
+**障碍**
+- 对于客户讲的有些内容、词语句不太理解，但又不太好打断，并询问其意思
+- 对Git及源码管理工具未做深入研究与理解，未提前与同事了解需要了解的知识点，对合同文件没有仔细研读、分析，以后主动提问并了解相关情况
+- 对于客户部门负责人提的问题不懂得解答，没有思路
+
 ## XPV实施/咨询第一周
 
 ## 第四天 01-05 周五
@@ -8,13 +34,13 @@
     - 客户反馈有一大部分人收到了邮件通知，于是在询问为什么会发给这么多人
     - 我第一时间查找原因，然后查看了系统帐号和组，但不够仔细，未找出原因
     - 后来与客户语音联系，有一点点不知道怎么说，但最后是要查找原因
-    - 然后与同事联系，他给了些思路，于是找到了原因：Administrators组下包含了Domain Admin组，而邮件通知是发给了Administrators组，帮产生了问题。细想一下其实初次进入项目，有一点点慌，静下来应该能找到原因。
+    - 然后与同事联系，他给了些思路，于是找到了原因：Administrators组下包含了Domain Admin组，而邮件通知是发给了Administrators组，帮产生了问题。细想一下其实初次进入项目，有一点点慌，静下来应该能找到原因。**解决办法**：在TFS Admin Console 中的组权限中，把本机Administrators组移除掉
 - 下午重点是还原操作，期间遇到了些问题总结下：
     - 因为之前没有作过这方面练习，操作部分未不太熟悉
     - 没有做预先准备、查看文档，虽然XX给了份文档，但文档不太详细
     - 应该先把操作流程了解清楚
 - 下午的问题是：
-    - 还原TFS备份到测试环境时，ReportServer和ReportServerTempDb 无法通过还原的方式恢复Sql Server Report Service，运行时报 Scale Out Deployment的问题，最后确认算是TFS的SqlServer Standard版本的一个BUG，迁移当成了集群部署，集群部署Standard不支持，参考地址
+    - 还原TFS备份到测试环境时，ReportServer和ReportServerTempDb 无法通过还原的方式恢复Sql Server Report Service，运行时报 Scale Out Deployment的问题，最后确认算是TFS的SqlServer Standard版本的一个BUG，迁移当成了集群部署，集群部署Standard不支持，[解决办法](https://social.msdn.microsoft.com/Forums/sqlserver/en-US/8eebf25f-2c40-40d3-9bb7-bb481fdafc12/is-this-a-scaleout-deployment-?forum=sqlreportingservices)
 - 将TFS还原到不同的机器：先备份到共享目录，备份SSRS Key，停止TFS项目集合，停止TFS应用服务，停止Reporting Service，修改TFS四个数据库名称，还原数据库，启动 Reporting Service ,启动TFS应用服务，验证
 
 ## 第一天 01-02
