--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -5,7 +5,7 @@
  - [学习敏捷-构建高效团队](https://book.douban.com/subject/26979886/)
  - [DevOps架构师行动指南 导读](https://mp.weixin.qq.com/s?__biz=MjM5NjQ4MzI5MA==&mid=2650585290&idx=1&sn=7506625425f9cc18fe1c6dcfddb7c0d0&chksm=bee0817f89970869dfbd7caa45aa6aaef3a73d84f10544ee96045c8a188b7d63088724ecd7cc&mpshare=1&scene=1&srcid=09265joh2Aq8YF6EREhZ4oNo&pass_ticket=88Ll6icYrFUsbphRjUMjDIvw9oQjDVYn1vW3ZiKDbjx7cbF3GKS3HzzlP5%2B1NG7l#rd)
  - [精益产品开发(原则方法与实施) 何勉](https://book.douban.com/subject/27116921/)
- - [重新定义公司：谷歌是如何运营的](https://book.douban.com/subject/26582822/)
+ - [重新定义公司 ：谷歌是如何运营的](https://book.douban.com/subject/26582822/)
  - [重新定义团队：谷歌如何工作](https://book.douban.com/subject/26608585/)
  - [THE BEGINNER'SGUIDE TO OKR](https://d335luupugsy2.cloudfront.net/cms/files/15929/1503544534The_Beginners_Guide_to_OKR.pdf)
  - [Stop Waterfall Goals](https://d335luupugsy2.cloudfront.net/cms%2Ffiles%2F15929%2F1503535764Life_is_too_short_for_waterfall_goals.pdf)
@@ -21,11 +21,60 @@
 **相关资料**
 - [活动介绍](http://www.huodongxing.com/event/6419745911500)
 - [活动回顾](http://mp.weixin.qq.com/s/PIogu6I6V57pF73Q-uUAdQ)
+- [PPT讲义](https://pan.baidu.com/s/1nvvIFXZ),密码：dfq3
+- [团队角色测试]()
 
 **上午设计思维**
-设计思维是一种方法论，包括一系列的实践，可以用于产品设计，包括各种实物、系统、软件、APP，甚至是某些特定问题的解决方案
+- 定义
+设计思维是一种方法论，包括一系列的实践，可以用于产品设计，包括各种实物、系统、软件、APP，甚至是某些特定问题的解决方案. 用户、技术、商业的交叉
+创造力是人的本能，激发创造力，解决问题
+- 用户体验
+以自己最理想、最舒服、最享受的的方式体验生活
+- 棉花糖游戏
+三种方式实现：
+**计划型**，注重计划与设计，在这两个阶浪费大量时间，缺失实践能力，代表角色：商业学院学生
+**探索型**，快速开始，快速验证，快速调整
+**突破型**，突破常规思维，投机取巧
+**核磁共振仪的设计**
+- 传统设计：冷冰冰的设计，缺乏人文关怀，小朋友不方便
+- 设计思维：暧暧的设计，有人文关怀，加入小朋友喜欢的元素，变得有趣
+**保温箱的设计**，[参考这个故事](http://www.sohu.com/a/156116195_769195)
+采用迭代思维进行实现
+**购物车的改进**
+
+机构：MIT、IDEO、D School
+
+**经典流派-设计思维，实践的五个步骤**
+- 共情，同理心，体察用户心理，“自己做的产品自己吃”
+采用用户画像，对用户进行建模，用极端用户、边界用户来验证方案
+工具：用户体验地址：横轴步骤，纵轴：所说、所做、所思、所感
+- 介定，定义问题
+- 创想，头脑风暴
+三不五要
+- 原型，制作原型，改进设计
+商业模式画布，五个草图，模拟风投竞赛
+- 验证，制作实物，验证解决方案
+- 
+- 迭代，快速反馈改进
+
+
+
 
 **下午管理3.0**
+- 人肉排序：自组织
+- 鼓励团队、负能团队、培养能力
+- 结构成长，统一目录
+- 全面改进
+
+**了解团队的方式**
+1对1访谈。。。。。。
+- 维度：正式、非正式，自评、他评，工作、生活
+- 游戏化一切，讲究趣味性，调动情绪，更容易记忆
+- 行为=f(P,E),P:人的个性，E：环境
+
+
+
+
 
 ## markdown
  - [doctoc 根据MD文件生成导航链接](https://github.com/thlorenz/doctoc)
