--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -2,8 +2,33 @@
 
 ## XPV实施/咨询第二周
 
+## 第三周第1、2天 01-15、01-16
+- 整理Git、TFVC相关工具，下载并存放到服务器，并整理到MD文件（添加到项目中）[git-tfvc-tools](git-tfvc-tools.md)
+- 研究VSS代码库迁移至Git的方法，可以采用开源工具 [vss2git](https://github.com/trevorr/vss2git)
+- 编写文档：02_Visual Studio TFS Git 源代码管理操作手册，同时使用VS练习git操作，分支之间合并时可以编辑后在提交
+- 版控方案还会继续开发讨论，明天会有个会议，估计要到周五才能决定使用git还是tfvc
+
+**个人感想**
+- 一方面，客户的总结周报并未发送给我们，从信息的透明性来和沟通效率来说，周报应该发抄送给我们
+- 客户此次参与进来的人都是无法做决策的人，在他们获取信息后，还需要上报，并且也要考虑上极领导决定。觉得这种方式低效。
+而且领导会往往会夹杂自己的意见。在沟通效率上不太好。
+- 感觉一开始对客户公司的工作模式，决策模式都不太了解，对此次咨询级别太低。工作略为被动。窗口人感觉会压力较大，做为顾问是否应该需要从这个角度去思考下？
+- 对于一些工具的使用细节，在前期我们自己有时候也不太清楚，个人觉得，早些时候就应该准备一些环境和文档，有问题马上一起验证。有了Demo后，客户能见到实际的东西，才会有更直观的认识
+- 我自己也应该专门花时间去验证和操作一次，感觉很多时间花在写文档上了
+
+## 第二周第3、4、5天 01-10、01-11、01-12 访谈
+- 整理版控设计概要文档
+- 编写访谈记录，提出建议方案，整理Git和TFVC差异
+- 整理TFSManagement中的工作项和迭代
+- 周五上午开会确认采用的版控，都选择git
+- 周五下载有人来问一些问题：代码比较、切换分支、配置文件处理办法
+
+**个人感想**
+客户问问题时，对自己不知道的老是想撇开个人因素，把原因归到外部因素，这是一种思维方式，会本能的从客观角度寻找问题
+与客户沟通时，应该是站在教和授的角度，把客户的问题理解清楚，结合自己的开发经验和使用经验给出答案，同时应该从多个角度思考解决方案，尽量完整，可以给一些较好的建议，如果自身无经验，可以从自己学到内容中思考，给出一个方案，并解释这个方案自己还需验证，有答案后在和对方确认。如有不知道的，直接说：记不清了，找同事确认，或是事后自己研究验证
+
 ## 第二周第1、2天 01-8、01-9 访谈
-了解各部门现有发版流程，讲解TFS/GIT，演示使用Git PR 来做源码版本管控
+了解各部门现有发版流程，讲解TFS/TFVC/GIT，演示使用Git PR 来做源码版本管控
 
 **面临的问题**
 - 目前都采用手工部署
