--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -2,6 +2,16 @@
 
 ## XPV实施/咨询第二周
 
+
+## 第三周第3、4天 01-17、01-18
+- 写00号文档，感觉没啥思路，不太好写
+
+**感想**
+由于是从工具层面切入做咨询和实施，说白了就是卖产品。所有和敏捷实施/过程改进是不太一样的，工具实施是以工具落地为目标，在流程上只会对工具层面有影响的方面做改进，正常是这样。如果客户有其他要，主动提出问题，并希望给出问题，希望帮他们改进，这也是可以的。所以说这种实施方式的高度和层级不够。而敏捷/过程改进的目标是提升整体的效率，提升创新和竞争力，所以这种站的层次会高一些，但过程改进总是要工具提供支撑的，但目标不是工具
+
+工具实施，对于个人来说，一方面在沟通、和思维方式上可以有更多的锻炼机会，特别是需要培训，另外技术上也不会落下，也需要关注技术的发展。最重要的是在研发管理方面也能积累更多经验，客户开发过程越不规范，个人机会越大
+不好的地方就是，在团队管理和协作上可能会得不到锻炼，特别是敏捷的一些管理实践可能比较少机会参与
+
 ## 第三周第1、2天 01-15、01-16
 - 整理Git、TFVC相关工具，下载并存放到服务器，并整理到MD文件（添加到项目中）[git-tfvc-tools](git-tfvc-tools.md)
 - 研究VSS代码库迁移至Git的方法，可以采用开源工具 [vss2git](https://github.com/trevorr/vss2git)
