更新PV的工作

--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,6 +15,22 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+## 2018-02-05 家中 从厦门回来第一天 
+
+## 样式雷家族
+
+[样式雷历史](https://pic1.zhimg.com/14005e7209ac0cda0bcba6e41b9f2013_r.jpg)
+
+是对清代200多年间主持皇家建筑设计的雷姓世家的誉称。 中国清代宫廷建筑匠师家族：雷发达，雷金玉，雷家玺，雷家玮，雷家瑞，雷思起，雷廷昌等
+
+在十七世纪末年，一个南方匠人雷发达来北京参加营造宫殿的工作。因
+样式雷设计的作品为技术高超，很快就被提升担任设计工作。从他起一共七代直到清朝末年，主要的皇室建筑如宫殿、皇陵、圆明园、颐和园等都是雷氏负责的。这个世袭的建筑师家族被称为“样式雷”。
+样式雷祖籍江西永修，从第一代样式雷雷发达于康熙年间由江宁（现江苏南京）来到北京，到第七代样式雷雷廷昌在光绪末年逝世，雷家有七代为皇家进行宫殿、园囿、陵寝以及衙署、庙宇等设计和修建工程。因为雷家几代都是清廷样式房的掌案头目人（用今天话说就是首席建筑设计师），即被世人尊称为"样式雷"，也有口语话"样子雷"的叫法
+
+[雷印华：傻气"草根"欲兴"样式雷"文化](http://house.people.com.cn/GB/98385/98469/6632613.html)
+
+清代最有影响的皇家建筑设计师“样式雷”的后人，从一个一文不名的打工仔，打拼成如今拥有过亿资产的集房地产、化工、贸易、食品、矿业、影视文化等多种产业的雷氏企业集团董事长。他在发展事业的同时，将发展中国古代建筑文化作为自己毕生的事业
+
 ## 2018-01-06 广州敏捷之旅 总结
 报名参加了 上午和下午的工作坊：设计思维和管理3.0 。总体感觉只是体验了一下，对其中的内容及理论并未做讲解，最大的收获是感受到工作坊的氛围，亲身体验了工作坊，感觉还不错，挺有趣的
 
