--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,10 +1,36 @@
 # 工作笔记、备忘，包括技术、管理等
 
-## XPV实施/咨询第二周
+## XPV实施/咨询第五周-最后一周 01-29~02-02
+本周主要工作是End-User 培训。
+
+**感受**
+在最后几天有时间的情况下，多做些收尾工作，列清单。尽量不要把一些总结工作带回来家来做
+
+## 第四周 01-22~26
+- 本周主要是迁移培训（一个人）
+编写迁移文档，分别为四个部门讲解迁移步骤，并一边操作一边演示，从周二到周五上午。
+下午主要是编写文档，解决客户提出的问题
+- 编写和完善00号文档，为下周培训准备
+主要是内容的完善，添加了开发流程图，此流程图偏向于配置工具，主要是以搭配配置工具使用为目标而画的，所以只涉及代码程序在各个环境流转的流程。周四晚上花了三四个小时才画好的。周五针对流程图讨论后，又改了两版。变更了BUG修复 的流程：开始是从各环境拉代码修复BUG，现改为统一从Dev修复（紧急BUG在Prod分支修复）。讨论时，感觉大家都希望在QAS代码分支修复BUG、ProdBUG在Prod分支修复 ，但有一人说 怕是领导不同意，后面其他人也没有只好顺从
+
+**感想**
+其中有一个部门，主要是Java开发的系统。有两个问题，一个是TEE安装问题，另一个是从TFS获取项目后，项目类型转换问题。从问题本身，这与代码版本管理是无关的，这些问题应该他们自己解决，但从顾问的角度来说，我们可以给他们提供解决方案，而且应该展示专业能力，因为通常来说顾问一般经验丰富。但对于问题首先应该要做一个归类，哪些是分内责任，哪些我们只能协助处理，对于分内的问题应该尽快解决，并给予客户及时反馈。对于分外的只是需要协助的，应该引导问题提出人主动找我们来解决。另一方面，Java方面的技术了解得不多，对于解决这方面的问题，多少有点不足。后面需加强学习。在实施过程中，尽量自己多去偿试和验证想法，犹奇是经验较少的部分
+
+- 对于中途变更关键流程的看法
+对于顾问来说，在计划中应该体现出客户何时做什么样的决策，在实施中也要多强调（特别是影响），推进工作。当适当的时候未做决策时，而且 一直是以我们设计的方案推进，在关键节点改变流程时，对于实施工作来说略显被动
 
 
-## 第三周第3、4天 01-17、01-18
-- 写00号文档，感觉没啥思路，不太好写
+**培训时的表达能力**
+培训时舌头还是会打结，感觉还是没办法放松，大脑无法正常思考
+
+## 第三周第3、4天 01-17、01-18、01-19
+- 写00号流程规范文档，感觉没啥思路，不太好写
+- 本周TPV内部讨论使用TFVC还是Git，19号确定采用TFVC。之前的文档写的是Git方面的。现重点为TFVC
+- 编写完善版本控制流程规划概要PPT文档，主要是画分支模型图
+- 在00号文档中主要写流程性的内容，内容的操作步骤处主要是为了说明为了支持此流程需要做哪些事情，同时区分操作的角色。
+- 周四起为一个在现场工作
+- 从最开始倾向Git，最后汇报给各领导后又改为TFVC
+思维还是偏传统，管理方式也是，变成了最终决策的是领导，而不是使用工具的人。
 
 **感想**
 由于是从工具层面切入做咨询和实施，说白了就是卖产品。所有和敏捷实施/过程改进是不太一样的，工具实施是以工具落地为目标，在流程上只会对工具层面有影响的方面做改进，正常是这样。如果客户有其他要，主动提出问题，并希望给出问题，希望帮他们改进，这也是可以的。所以说这种实施方式的高度和层级不够。而敏捷/过程改进的目标是提升整体的效率，提升创新和竞争力，所以这种站的层次会高一些，但过程改进总是要工具提供支撑的，但目标不是工具
