--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -1,5 +1,26 @@
 # 工作笔记、备忘，包括技术、管理等
 
+##  XPV实施/咨询总结
+
+**主要工作：**
+
+- 安装、部署、配置TFS测试环境和正式环境
+
+期间发现两个问题：批量发送邮件给Domain Admin组，因为这个组在本机Admins组中（在TFS管理员组移除Domain Admin组）、将正式环境备份恢复到测试环境，报表服务无法正常工作，提示 Scale Out Deployment（[最后解决办法是修改数据库数据](https://social.msdn.microsoft.com/Forums/sqlserver/en-US/8eebf25f-2c40-40d3-9bb7-bb481fdafc12/is-this-a-scaleout-deployment-?forum=sqlreportingservices)）
+
+- 编写文档，包括流程规划和TFVC、Git操作手册文档
+中途遇到不太会写的时候，通常会与同事沟通，请教如何写。最关键是弄清写文档的目标，客户对文档的要求
+
+- 迁移培训
+表达得还凑合，讲解的还行。
+遇到一个问题：无法创建集合，有可能是开始还原的有问题（Login failed for user TPVAOC\CNHQVS1086$）。后面恢复测试环境的数据即可
+
+**感受**
+
+对客户提出的问题，先识别其意图，在界定是否属于分内职责。同时针对问题给出尽可能多的解决方案，从最佳实践到当前最便利的方式，最后给出建议，说明利弊，最终决策权交给客户。在举例时，尽量采用真实的案例来说明
+
+要有自信、自己就是权威、沟通时提升高度（站的层次）、同理心（自己做开始时怎么做、自己是客户的一员时会如何思考）
+
 ## XPV实施/咨询第五周-最后一周 01-29~02-02
 本周主要工作是End-User 培训。
 
