--- a/blog/4article/2017年度总结和2018展望.md
+++ b/blog/4article/2017年度总结和2018展望.md
@@ -50,6 +50,19 @@
 
 这其中最重要的是，通过申导的文章，了解到了NLP，同时在学习敏捷开发时了解到的教练技术，及RUA，然后在群里提了个问题，有没什么NLP的书，后面申导推荐了 重塑心灵，巧合的是这书同名了，有两本，一本是偏向XX心理学，从此世界的大门打开了，谢谢申导
 
+## 旅游
+- 南宁、北海 6月底到7月初
+第一次去海边，终于体会到了无垠无边的感觉
+- 惠州大亚湾和深圳大鹏岛马较场 7月、8月
+和梦龙一起去的，同时一起去接侄子，感受到了朋友之间的那种友谊，同时也体会了与侄子互动时能感受到他玩得很开心，对于他来说这种机会难得
+- 惠州序撩湾：9月
+与广州电商同事一起，一起吃饭聊天，分享自己的趣事、人生观，感受到了与朋友互动倾吐心事带来的连结感
+- 金子山 11朋
+爬山，有点辛苦，但也很值得，感受到了与另一伴互相鼓励、共同奔赴目标时整个过程带来的快感、达成目标后的成就感，这种成就是两个共同拥有的
+- 夏门，第一次
+出差的时候顺便旅游，沿海岸线骑了将近二十公里，最后到了厦门大学。很漂亮，也很好玩。一个人也可以很嗨
+- 夏门，第二次
+和另一伴一起，感觉很好，挺开心的。先是去空中BRT线上骑自行车，后来去了植物园，多肉植物。发现自己慢慢喜欢上了与大自然亲近。后面周日还去了同安影视城。周日晚上那天去了五缘湾湿地公园，稍微有点失落。骑车沿湖边骑了两个小时左右
 
 ## 2018年规划
 
@@ -65,7 +78,7 @@
 
 
 **身体**
-继续跑步，合适的时候跑个健身班
+继续跑步（目标为120次），合适的时候跑个健身班
 
 **婚姻与家庭**
 - 改善与另一伴的改系，一同成长
