--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,6 +15,11 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+
+## 2018-02-12 过年回前前一天
+
+- 电影 三块广告牌，反映美国的社会 
+
 ## 2018-02-05 家中 从厦门回来第一天 
 
 ## 电影 马戏人生
