blog\0learn\note-work\2018.md

--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -9,7 +9,8 @@
  [如何在多服务器配置中设置TFS](https://docs.microsoft.com/zh-cn/vsts/tfs-server/install/multiple-server)
  [Always On 可用性组入门 (SQL Server)](https://docs.microsoft.com/zh-cn/sql/database-engine/availability-groups/windows/getting-started-with-always-on-availability-groups-sql-server)
  [AlwaysOn 可用性组概述 (SQL Server 2014)](https://msdn.microsoft.com/zh-cn/library/ff877884(SQL.120).aspx) 
-
+ [Windows Server 中的故障转移群集](https://docs.microsoft.com/zh-cn/windows-server/failover-clustering/failover-clustering-overview)
+ [在Windows Server 2012中安装故障转移群集功能和工具](https://blogs.msdn.microsoft.com/clustering/2012/04/06/installing-the-failover-cluster-feature-and-tools-in-windows-server-2012/)
 
 ## GO/PWD Windows环境配置
 
