blog\0learn\note-work\2018.md

--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -44,7 +44,9 @@
 	Pulling haproxy (haproxy:latest)...
 ```
 
-``` 第二次
+第二次
+
+``` 
 PS V:\work\leansoft\golang\work-space\src\github.com\lean-soft\play-with-docker> docker-compose up
 WARNING: The Docker Engine you're using is running in swarm mode.
 
