--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,22 @@
 ﻿# 2018年上半年工作日志
 
+## 2018-05-18至2018-05-19 珠海MSUP培训总结
+
+[培训介绍](http://msup.com.cn/course/12338)
+
+## 会议准备
+
+- 测试网络情况、投影
+- 场会材料
+- 根据清单确认
+
+遇到的问题：便签纸未按要求准备
+
+## 培训内容收获
+
+
+
+
 ## 第一周 02-26至3-2日
 
 ## TFS高可用部署
