--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,4 +1,43 @@
-﻿# 2018年上半年工作日志
+
+# 2018年上半年工作日志
+
+## TFS 数据库大小减缓相关资料
+
+[Guide to reduce TFS database growth using the Test Attachment Cleaner](http://geekswithblogs.net/terje/archive/2011/11/15/guide-to-reduce-tfs-database-growth-using-the-test-attachment.aspx)
+
+[TFS tbl_TestResult table is very big
+](https://stackoverflow.com/questions/41059094/tfs-tbl-testresult-table-is-very-big)
+
+[Q: How can I delete test runs, results, and attachments in TFS 2015?](https://blogs.msmvps.com/vstsblog/2016/02/17/q-how-can-i-delete-test-runs-results-and-attachments-in-tfs-2015/)
+
+[使用Team Foundation Server 2015测试结果数据保留](https://blogs.msdn.microsoft.com/devops/2015/10/08/test-result-data-retention-with-team-foundation-server-2015/)
+
+[清理旧数据](https://docs.microsoft.com/zh-cn/vsts/tfs-server/upgrade/clean-up-data?view=tfs-2015&viewFallbackFrom=vsts)
+
+[Control how long to keep test results in VSTS](https://docs.microsoft.com/en-us/vsts/manual-test/getting-started/how-long-to-keep-test-results?view=vsts)
+
+[steps to determine and reduce tfs database growth and delete test attachments – part1](https://naveenalm.wordpress.com/2015/08/04/dar/)
+
+[use stored procedure and sql job to setup and monitor for low disk alerts](https://naveenalm.wordpress.com/2015/08/08/use-stored-procedure-and-sql-job-to-setup-and-monitor-for-low-disk-alerts/)
+
+[清理并减小TFS数据库的大小](https://gyorgybalassy.wordpress.com/2014/04/02/cleaning-up-and-reduce-the-size-of-the-tfs-database/)
+
+[TFS Database growing rapidely
+](https://stackoverflow.com/questions/44950311/tfs-database-growing-rapidely)
+
+[Control\Reduce TFS DB Size](http://blogs.microsoft.co.il/shair/2014/06/29/controlreduce-tfs-db-size/)
+
+[Finding and reducing TFS 2013 database size](https://b4root.wordpress.com/2014/03/11/finding-and-reducing-tfs-database-size/)
+
+[Need Help: TFS tbl_Content Table and Database growth out of control](https://mattyrowan.com/2014/04/02/need-help-tfs-tbl_content-table-and-database-growth-out-of-control/)
+
+[TFS 2015 - How to find disk space used for source file versions ?](https://social.msdn.microsoft.com/Forums/vstudio/en-US/4067aade-4c43-4d66-b6d4-8e7c5ad93c3b/tfs-2015-how-to-find-disk-space-used-for-source-file-versions-?forum=tfsversioncontrol)
+
+[TFS 2017 u1 dbo.tbl_content growing dramatically (rows+size)](https://stackoverflow.com/questions/39752491/tfs-2015-persistent-decrease-of-disk-space)
+
+[]()
+
+# 2018年上半年工作日志
 
 ## 2018-05-18至2018-05-19 珠海MSUP培训总结
 
