--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -35,7 +35,7 @@
 
 [TFS 2017 u1 dbo.tbl_content growing dramatically (rows+size)](https://stackoverflow.com/questions/39752491/tfs-2015-persistent-decrease-of-disk-space)
 
-[]()
+[TFS Database size](https://developercommunity.visualstudio.com/content/problem/63712/tfs-database-size.html)
 
 # 2018年上半年工作日志
 
