--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -37,6 +37,8 @@
 
 [TFS Database size](https://developercommunity.visualstudio.com/content/problem/63712/tfs-database-size.html)
 
+[roubleshooting-TFS-DB-Growth](https://dannylane.github.io/2017/03/22/Troubleshooting-TFS-DB-Growth.html)
+
 # 2018年上半年工作日志
 
 ## 2018-05-18至2018-05-19 珠海MSUP培训总结
