--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -39,6 +39,8 @@
 
 [roubleshooting-TFS-DB-Growth](https://dannylane.github.io/2017/03/22/Troubleshooting-TFS-DB-Growth.html)
 
+[清理SQL Server日志释放文件空间的终极方法](http://www.cnblogs.com/dudu/archive/2013/04/10/3011416.html)
+
 # 2018年上半年工作日志
 
 ## 2018-05-18至2018-05-19 珠海MSUP培训总结
