--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -41,6 +41,8 @@
 
 [清理SQL Server日志释放文件空间的终极方法](http://www.cnblogs.com/dudu/archive/2013/04/10/3011416.html)
 
+[TFS应用经验-大型项目数据仓库抽取导致的TFS应用无法访问](https://www.cnblogs.com/jlw123199/p/6405148.html)
+
 # 2018年上半年工作日志
 
 ## 2018-05-18至2018-05-19 珠海MSUP培训总结
