--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,13 @@
 # 2018年下半年工作日志
 
+## 工具推荐
+
+### java
+
+| 构建| 单元测试| 代码分析 |业务测试| 接口测试 | 压力测试 |UI测试 |
+| ------ | ------ | ------ | ------ | ------ | ------ | ------ |
+| Maven| JUnit| SonarQube | Cucumber | JMater | JMater | Selenium |
+
 ## TFS 数据库大小减缓相关资料
 
 [Guide to reduce TFS database growth using the Test Attachment Cleaner](http://geekswithblogs.net/terje/archive/2011/11/15/guide-to-reduce-tfs-database-growth-using-the-test-attachment.aspx)
