--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -4,9 +4,9 @@
 
 ### java
 
-| 构建| 单元测试| 代码分析 |业务测试| 接口测试 | 压力测试 |UI测试 |
-| ------ | ------ | ------ | ------ | ------ | ------ | ------ |
-| Maven| JUnit| SonarQube | Cucumber | JMater | JMater | Selenium |
+| 构建| 单元测试| 代码分析 | 接口测试 | 压力测试 |UI测试| 验收测试 |  基于场景的测试|
+| ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ |
+| Maven| JUnit| SonarQube | JMater | JMater | Selenium | Robot framework | [Cucumber](https://www.jianshu.com/p/b934ce61c9dc)，可用于单元测试、验收测试 |
 
 ## TFS 数据库大小减缓相关资料
 
