--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -8,6 +8,10 @@
 | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ |
 | Maven| JUnit| SonarQube | JMater | JMater | Selenium | Robot framework | [Cucumber](https://www.jianshu.com/p/b934ce61c9dc)，可用于单元测试、验收测试 。  [BDD 框架对比: Cucumber.js vs Robot Framework vs Gauge.js](https://www.phodal.com/blog/how-to-choice-you-bdd-framework-robot-cucumber-gauge/) |
 
+
+### 问题
+JMater 可以用命令行工具与TFS集成，但测试结果TFS目前还不能识别，[参考这里](https://developercommunity.visualstudio.com/content/problem/173960/cant-publish-jmeter-result-to-tfs.html)
+
 ## TFS 数据库大小减缓相关资料
 
 [Guide to reduce TFS database growth using the Test Attachment Cleaner](http://geekswithblogs.net/terje/archive/2011/11/15/guide-to-reduce-tfs-database-growth-using-the-test-attachment.aspx)
