--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -12,6 +12,11 @@
 ### 问题
 JMater 可以用命令行工具与TFS集成，但测试结果TFS目前还不能识别，[参考这里](https://developercommunity.visualstudio.com/content/problem/173960/cant-publish-jmeter-result-to-tfs.html)
 
+### 记要
+
+接口测试工具：[SoapUI、Jmeter、Postman](https://blog.csdn.net/huilan_same/article/details/75413482)
+
+
 ## TFS 数据库大小减缓相关资料
 
 [Guide to reduce TFS database growth using the Test Attachment Cleaner](http://geekswithblogs.net/terje/archive/2011/11/15/guide-to-reduce-tfs-database-growth-using-the-test-attachment.aspx)
