--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -24,6 +24,8 @@
 
 -  [Robot framework](https://liftcodeplay.com/2017/11/13/how-to-use-robot-framework-selenium-tests-in-a-vsts-release-pipeline/)
 
+- [best-automation-testing-tools-for-2018-top-10](https://medium.com/@briananderson2209/best-automation-testing-tools-for-2018-top-10-reviews-8a4a19f664d2)
+
 ## TFS 数据库大小减缓相关资料
 
 [Guide to reduce TFS database growth using the Test Attachment Cleaner](http://geekswithblogs.net/terje/archive/2011/11/15/guide-to-reduce-tfs-database-growth-using-the-test-attachment.aspx)
