--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -6,7 +6,7 @@
 
 | 构建| 单元测试| 代码分析 | 接口测试 | UI测试| 验收测试 |  基于场景的测试(BDD)|
 | ------ | ------ | ------ | ------ | ------  | ------ | ------ |
-| Maven| JUnit| SonarQube | [SoapUI](https://marketplace.visualstudio.com/items?itemName=AjeetChouksey.soapui) / [Postman](https://marketplace.visualstudio.com/items?itemName=carlowahlstedt.NewmanPostman)| Selenium/CodedUI , Appium(移动端)| Robot framework | [Cucumber](https://www.jianshu.com/p/b934ce61c9dc)，可用于单元测试、验收测试 。  [BDD 框架对比: Cucumber.js vs Robot Framework vs Gauge.js](https://www.phodal.com/blog/how-to-choice-you-bdd-framework-robot-cucumber-gauge/) |
+| Maven| JUnit| SonarQube | [SoapUI](https://marketplace.visualstudio.com/items?itemName=AjeetChouksey.soapui) / [Postman](https://marketplace.visualstudio.com/items?itemName=carlowahlstedt.NewmanPostman)| Selenium/CodedUI)| Robot framework | [Cucumber](https://www.jianshu.com/p/b934ce61c9dc)，可用于单元测试、验收测试 。  [BDD 框架对比: Cucumber.js vs Robot Framework vs Gauge.js](https://www.phodal.com/blog/how-to-choice-you-bdd-framework-robot-cucumber-gauge/) |
 
 
 ### 问题
@@ -25,6 +25,8 @@
 -  [Robot framework](https://liftcodeplay.com/2017/11/13/how-to-use-robot-framework-selenium-tests-in-a-vsts-release-pipeline/)
 
 - [best-automation-testing-tools-for-2018-top-10](https://medium.com/@briananderson2209/best-automation-testing-tools-for-2018-top-10-reviews-8a4a19f664d2)
+
+-  , Appium 移动端 ui测试
 
 ## TFS 数据库大小减缓相关资料
 
